--- a/index.delivery.html
+++ b/index.delivery.html
@@ -14,15 +14,8 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
-    header img {
-      height: 50px;
-      margin-right: 20px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.6em;
-      font-weight: bold;
-    }
+    header img { height: 50px; margin-right: 20px; }
+    header h1 { margin: 0; font-size: 1.6em; font-weight: bold; }
     .container { padding: 20px; }
     .chart-box, .total-box, .resumo-box {
       background: white;
@@ -32,12 +25,13 @@
       margin-bottom: 20px;
     }
     .chart-box canvas { max-width: 100%; height: 300px; }
-    .total-box h3, .resumo-box h3 { margin-top: 0; }
     .total-line { display: flex; justify-content: space-between; padding: 5px 0; font-size: 1.1em; }
     .total-line strong { font-weight: bold; }
-    .filters { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end; }
+    .filters {
+      display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: end;
+    }
     .filters label { font-weight: bold; }
-    .filters select, .filters input[type="date"] {
+    .filters select {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
@@ -100,7 +94,7 @@
         <option value="04">Abril</option>
         <option value="05">Maio</option>
         <option value="06">Junho</option>
-        <option value="07" selected>Julho</option>
+        <option value="07">Julho</option>
         <option value="08">Agosto</option>
         <option value="09">Setembro</option>
         <option value="10">Outubro</option>
@@ -136,12 +130,40 @@
 
   <div class="filters">
     <div>
-      <label for="dataInicio">Data Início</label>
-      <input type="date" id="dataInicio">
+      <label for="mesInicio">Mês Inicial</label>
+      <select id="mesInicio">
+        <option value="">Todos</option>
+        <option value="01">Janeiro</option>
+        <option value="02">Fevereiro</option>
+        <option value="03">Março</option>
+        <option value="04">Abril</option>
+        <option value="05">Maio</option>
+        <option value="06">Junho</option>
+        <option value="07">Julho</option>
+        <option value="08">Agosto</option>
+        <option value="09">Setembro</option>
+        <option value="10">Outubro</option>
+        <option value="11">Novembro</option>
+        <option value="12">Dezembro</option>
+      </select>
     </div>
     <div>
-      <label for="dataFim">Data Fim</label>
-      <input type="date" id="dataFim">
+      <label for="mesFim">Mês Final</label>
+      <select id="mesFim">
+        <option value="">Todos</option>
+        <option value="01">Janeiro</option>
+        <option value="02">Fevereiro</option>
+        <option value="03">Março</option>
+        <option value="04">Abril</option>
+        <option value="05">Maio</option>
+        <option value="06">Junho</option>
+        <option value="07">Julho</option>
+        <option value="08">Agosto</option>
+        <option value="09">Setembro</option>
+        <option value="10">Outubro</option>
+        <option value="11">Novembro</option>
+        <option value="12">Dezembro</option>
+      </select>
     </div>
     <div>
       <label for="empresa">Empresa</label>
@@ -162,7 +184,6 @@
     </div>
   </div>
 
-  <!-- BOTÃO WHATSAPP -->
   <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
 
   <div class="resumo-box">
@@ -178,12 +199,12 @@ let chart;
 
 function setDefaultDates() {
   const hoje = new Date();
-  const ano = hoje.getFullYear();
-  const mes = hoje.getMonth();
-  const inicio = new Date(ano, mes, 1);
-  const fim = new Date(ano, mes, 5);
-  document.getElementById("dataInicio").value = inicio.toISOString().split('T')[0];
-  document.getElementById("dataFim").value = fim.toISOString().split('T')[0];
+  let mesAnterior = hoje.getMonth();
+  if (mesAnterior === 0) mesAnterior = 12;
+  const mesStr = mesAnterior.toString().padStart(2, '0');
+  document.getElementById("mesInicio").value = mesStr;
+  document.getElementById("mesFim").value = mesStr;
+  document.getElementById("mesResumo").value = mesStr;
 }
 
 async function carregarDados() {
@@ -215,9 +236,7 @@ function popularEmpresas() {
 function atualizarTotais() {
   const mes = document.getElementById("mesResumo").value;
   const empresa = document.getElementById("empresaResumo").value;
-  let totalIfood = 0;
-  let totalDM = 0;
-
+  let totalIfood = 0, totalDM = 0;
   dados.forEach(d => {
     const mesDado = d.data.split("-")[1];
     if ((mes && mes !== mesDado) || (empresa && d.empresa !== empresa)) return;
@@ -225,7 +244,6 @@ function atualizarTotais() {
     if (d.plataforma === "iFood") totalIfood += bruto;
     if (d.plataforma === "Delivery Much") totalDM += bruto;
   });
-
   document.getElementById("total-ifood").textContent = "R$ " + totalIfood.toLocaleString('pt-BR', { minimumFractionDigits: 2 });
   document.getElementById("total-dm").textContent = "R$ " + totalDM.toLocaleString('pt-BR', { minimumFractionDigits: 2 });
   document.getElementById("total-geral").textContent = "R$ " + (totalIfood + totalDM).toLocaleString('pt-BR', { minimumFractionDigits: 2 });
@@ -239,10 +257,8 @@ function filtrarGrafico() {
     const label = new Date(data).toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit' });
     agrupado[label] = (agrupado[label] || 0) + bruto;
   });
-
   const labels = Object.keys(agrupado).sort();
   const valores = labels.map(d => agrupado[d]);
-
   if (chart) chart.destroy();
   chart = new Chart(document.getElementById("graficoVendas").getContext('2d'), {
     type: 'line',
@@ -275,13 +291,14 @@ function filtrarGrafico() {
 }
 
 function atualizarResumoEmpresa() {
-  const dataInicio = document.getElementById("dataInicio").value;
-  const dataFim = document.getElementById("dataFim").value;
+  const mesInicio = document.getElementById("mesInicio").value;
+  const mesFim = document.getElementById("mesFim").value;
   const empresa = document.getElementById("empresa").value;
   const plataforma = document.getElementById("plataforma").value;
   const filtrados = dados.filter(d => {
-    return (!dataInicio || d.data >= dataInicio) &&
-           (!dataFim || d.data <= dataFim) &&
+    const mesDado = d.data.split("-")[1];
+    return (!mesInicio || mesDado >= mesInicio) &&
+           (!mesFim || mesDado <= mesFim) &&
            (empresa === "todas" || d.empresa === empresa) &&
            (plataforma === "todas" || d.plataforma === plataforma);
   });
@@ -291,17 +308,11 @@ function atualizarResumoEmpresa() {
     const emp = d.empresa;
     const plat = d.plataforma;
     if (!resumoPorEmpresa[emp]) resumoPorEmpresa[emp] = {};
-    if (!resumoPorEmpresa[emp][plat]) {
-      resumoPorEmpresa[emp][plat] = { bruto: 0, liquido: 0, taxa: 0, repassado: 0 };
-    }
-    const bruto = parseFloat(d.bruto || 0);
-    const liquido = parseFloat(d.liquido || 0);
-    const taxa = parseFloat(d.taxa || 0);
-    const repassado = parseFloat(d.repassado || 0);
-    resumoPorEmpresa[emp][plat].bruto += bruto;
-    resumoPorEmpresa[emp][plat].liquido += liquido;
-    resumoPorEmpresa[emp][plat].taxa += taxa;
-    resumoPorEmpresa[emp][plat].repassado += repassado;
+    if (!resumoPorEmpresa[emp][plat]) resumoPorEmpresa[emp][plat] = { bruto: 0, liquido: 0, taxa: 0, repassado: 0 };
+    resumoPorEmpresa[emp][plat].bruto += parseFloat(d.bruto || 0);
+    resumoPorEmpresa[emp][plat].liquido += parseFloat(d.liquido || 0);
+    resumoPorEmpresa[emp][plat].taxa += parseFloat(d.taxa || 0);
+    resumoPorEmpresa[emp][plat].repassado += parseFloat(d.repassado || 0);
   });
 
   const resumo = document.getElementById("resumo-empresas");
@@ -317,8 +328,7 @@ function atualizarResumoEmpresa() {
         <br><u>${plat}</u><br>
         💰 Bruto: R$ ${val.bruto.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>
         💵 Líquido: R$ ${val.liquido.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>
-        📉 Investimento (${perc.toFixed(2)}%): R$ ${val.taxa.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>
-      `;
+        📉 Investimento (${perc.toFixed(2)}%): R$ ${val.taxa.toLocaleString('pt-BR', {minimumFractionDigits: 2})}<br>`;
     }
     resumo.appendChild(div);
   }
@@ -330,7 +340,6 @@ function enviarWhatsapp() {
   const totalGeral = document.getElementById("total-geral").textContent;
   const empresa = document.getElementById("empresaResumo").value || "Todas as empresas";
   const mes = document.getElementById("mesResumo").value || "Todos os meses";
-
   const mensagem = `📊 *Resumo de Vendas Delivery* %0A🏢 Empresa: *${empresa}* %0A📅 Mês: *${mes}* %0A🍽️ iFood: *${totalIFood}* %0A📦 Delivery Much: *${totalDM}* %0A💰 Total Geral: *${totalGeral}*`;
   const telefone = "557799999999"; // Altere para o número desejado
   const url = `https://wa.me/${telefone}?text=${mensagem}`;
@@ -339,6 +348,5 @@ function enviarWhatsapp() {
 
 carregarDados();
 </script>
-
 </body>
 </html>
