--- a/index.delivery.html
+++ b/index.delivery.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 0; }
+    body { font-family: Arial, sans-serif; background: white; margin: 0; padding: 0; }
     header {
       background-color: white;
       padding: 10px 20px;
