--- a/index.delivery.html
+++ b/index.delivery.html
@@ -47,8 +47,8 @@
       font-weight: bold;
       cursor: pointer;
     }
-    .resumo-linha {
-  background: #eaffea;
+   .resumo-linha {
+  background: white;
   padding: 10px;
   border-radius: 8px;
   margin-bottom: 10px;
