--- a/index.delivery.html
+++ b/index.delivery.html
@@ -49,10 +49,14 @@
     }
    .resumo-linha {
   background: white;
-  padding: 10px;
-  border-radius: 8px;
-  margin-bottom: 10px;
+  padding: 15px 20px;
+  border-radius: 16px;
+  margin-bottom: 16px;
   line-height: 1.6;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  border: 1px solid #eee;
+}
+e-height: 1.6;
 }
     .resumo-linha strong { display: block; font-size: 1.1em; margin-bottom: 4px; }
     .total-box select#empresaResumo {
