--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -110,7 +110,7 @@
 </div>
 
 <script>
-const URL_SCRIPT = 'COLE_AQUI_SUA_URL_DO_WEBAPP';
+const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbwUdzUgrt9vJ7QO1JIwYPSR02zbMFiPoXw-B9A7J2JdtGqkCiWuiF4QGFsfKGMnLkIrxw/exec';
 let cancelamentos = [];
 
 async function carregarDados() {
